changes in customer controller
